--- a/toy example/score_tracking_toturial.ipynb
+++ b/toy example/score_tracking_toturial.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "##We follow the open source codes from https://github.com/NVlabs/edm2 for both dataset construction and diffusion model training.\n",
-    "You can directly use the models we trained or retrain the new model following the instruction from the above website."
+    "##You can directly use the models we trained or retrain the new model following the instruction from the above website."
    ]
   },
   {
@@ -363,7 +363,7 @@
    "id": "72fdb2b1",
    "metadata": {},
    "source": [
-    "#We modified the following function to return both the samples and the corresponding accumulated score differences."
+    "##We modified the following function to return both the samples and the corresponding accumulated score differences."
    ]
   },
   {
@@ -425,7 +425,7 @@
    "id": "0038890e",
    "metadata": {},
    "source": [
-    "#We plot the color-coded samples with the following function"
+    "##We plot the color-coded samples with the following function"
    ]
   },
   {
@@ -471,7 +471,7 @@
    "id": "b49fcbb3",
    "metadata": {},
    "source": [
-    "#Conduct the sampling and plot the figures."
+    "##Conduct the sampling and plot the figures."
    ]
   },
   {
@@ -528,18 +528,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fad4b8bb",
-   "metadata": {},
-   "source": [
-    "![toy](samples.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "bed1dc39",
    "metadata": {},
    "source": [
-    "#For a quantitative analysis, we divide ASD into 50 bins and plot the mean log-probability density of samples in each bin."
+    "##For a quantitative analysis, we divide ASD into 50 bins and plot the mean log-probability density of samples in each bin."
    ]
   },
   {
@@ -575,14 +567,6 @@
     "plt.xlabel(\"accumulated score differences\", fontsize=14)\n",
     "plt.ylabel(\"mean logp\", fontsize=16)\n",
     "plt.tick_params(axis='both', labelsize=12)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a3aa8357",
-   "metadata": {},
-   "source": [
-    "![toy](relation.png)"
    ]
   }
  ],
