--- a/ImageNet/cal_and_store_score.ipynb
+++ b/ImageNet/cal_and_store_score.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Calculate and store the ratings of the images in the corresponding folder"
+    "##Calculate and store the ratings of the images in the corresponding folder\n",
+    "##Follow the environment eval_score.yaml"
    ]
   },
   {
@@ -343,6 +344,44 @@
     "\n",
     "del aesthetic_score\n",
     "torch.cuda.empty_cache()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#store the average scores of filtering images from different labels\n",
+    "pick_excel = {'total_mean':[],'total_top_10':[],'step5_top_10':[],'step10_top_10':[],'step15_top_10':[],'step20_top_10':[],'step25_top_10':[]}\n",
+    "num_images = 10000\n",
+    "for rest1 in tqdm(range(len(paper_idx))):   \n",
+    "    class_idx = paper_idx[rest1]\n",
+    "    image_path = \"out_512_CFG_s/class{}\".format(class_idx)\n",
+    "    cur_prompt = paper_prompt[rest1]\n",
+    "\n",
+    "    nv_gap_origin = torch.load(\"concate_nv_gap/512_class{}_2.23_0to10000.pth\".format(class_idx),weights_only=True).cpu()\n",
+    "    cur_mean_gap = torch.mean(torch.mean(nv_gap_origin,dim=-1),dim=-1)\n",
+    "    total_sorted_mean,total_idx_mean = torch.sort(cur_mean_gap,descending=True)\n",
+    "    nv_gap_classify = nv_gap_origin.permute(1,0,2)\n",
+    "\n",
+    "    cur_pick_score = torch.load(\"image_score/pick_score/512_class{}_2.23_0to10000.pth\".format(class_idx),weights_only=True).cpu().squeeze(1)\n",
+    "    top10_idx = total_idx_mean[:1000]\n",
+    "    pick_excel['total_mean'].append(torch.mean(cur_pick_score).item())\n",
+    "    pick_excel['total_top_10'].append(torch.mean(cur_pick_score[top10_idx]).item())\n",
+    "\n",
+    "    time_steps = 5\n",
+    "    for i in range(5):\n",
+    "        nv_gap_time_steps = nv_gap_classify[:time_steps]\n",
+    "        nv_gap_time_steps = nv_gap_time_steps.permute(1,0,2)\n",
+    "        nv_gap_time_steps_mean = torch.mean(torch.mean(nv_gap_time_steps,dim=-1),dim=-1)\n",
+    "        sorted_mean,idx_mean = torch.sort(nv_gap_time_steps_mean,descending=True)\n",
+    "        top10_idx = idx_mean[:1000]\n",
+    "        pick_excel['step{}_top_10'.format(time_steps)].append(torch.mean(cur_pick_score[top10_idx]).item())\n",
+    "        time_steps += 5     \n",
+    "\n",
+    "    del nv_gap_origin, cur_pick_score\n",
+    "    torch.cuda.empty_cache()"
    ]
   }
  ],
