--- a/ImageNet/track_images.ipynb
+++ b/ImageNet/track_images.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##We utilize the EDM2-S model from https://github.com/NVlabs/edm2 to generate the images."
+    "##We utilize the EDM2-S model from https://github.com/NVlabs/edm2 to generate the images.\n",
+    "##Follow the environment generate.yaml"
    ]
   },
   {
