--- a/ImageNet/density_curve.ipynb
+++ b/ImageNet/density_curve.ipynb
@@ -5,7 +5,7 @@
    "id": "d576cbc3",
    "metadata": {},
    "source": [
-    "##plot the density curve of KNN and LOF\n",
+    "##Plot the density curve of KNN and LOF\n",
     "##Follow the environment generate.yaml"
    ]
   },
